[package]
name = "ara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.58"
tokio = { features = ["rt-multi-thread", "macros"] }
async-graphql = "5.0.10"
slab = "0.4.4"
tracing-subscriber = "0.3.17"
